# Multi-Doc-chat-RAG

./: README.md  main.py  pyproject.toml  requirements.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exceptions/: custom_exception.py
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/utils/: config_loader.py  document_loader.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  experiments.ipynb
