[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.0",
    "langsmith>=0.4.37",
    "openai>=2.5.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.4.0",
    "tiktoken>=0.12.0",
]
